<resources>
    <string name="app_name">FridgeTracker</string>
    <string name="calendar">Calendar</string>
    <string name="plan_week">Plan week</string>
    <string name="shopping_list">Shopping List</string>
    <string name="fridge_content">Fridge Content</string>
    <string name="menu">Menu</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="ingredient_name">Name</string>
    <string name="priceOptional">Price (optional)</string>
    <string name="save">Save</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="create_meal_name">Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="choose_a_day">Choose a day</string>
    <string name="plan_a_day">Plan a day</string>
    <string name="add_meals">Add meals</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="log_out" translatable="false">Log out</string>
</resources>
