<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AddIngredient"
        android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ingredient"
            style="@style/IngredientName"
            android:layout_gravity="center"
    />



    <EditText
            android:id="@+id/ingredientNameChoice"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/ingredient_name"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
    />

    <EditText
            android:id="@+id/ingredientPrice"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/price"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
    />

    <Button
            android:id="@+id/saveIngredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
    />

</LinearLayout>